--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -121,12 +121,12 @@ button.desktop-explorer {
     overscroll-behavior: contain;
 
     & li > a {
-      color: var(--dark);
-      opacity: 0.75;
+      color: var(--tertiary); // File links
+      // opacity: 0.75;
       pointer-events: all;
 
       &.active {
-        opacity: 1;
+        // opacity: 1;
         color: var(--tertiary);
       }
     }
@@ -157,8 +157,8 @@ button.desktop-explorer {
   user-select: none;
 
   & div > a {
-    color: var(--secondary);
-    font-family: var(--headerFont);
+    color: var(--dark); // Folder link color
+    font-family: var(--bodyFont);
     font-size: 0.95rem;
     font-weight: $semiBoldWeight;
     line-height: 1.5rem;
@@ -179,7 +179,7 @@ button.desktop-explorer {
     padding-right: 0;
     display: flex;
     align-items: center;
-    font-family: var(--headerFont);
+    font-family: var(--bodyFont);
 
     & span {
       font-size: 0.95rem;
