--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -135,9 +135,16 @@ button.desktop-explorer {
     padding: 0;
     overscroll-behavior: contain;
 
-    & li > a { // File links
+    .file-container {
+      &:has(a.active),
+      &:has(a:hover) {
+        background: rgb(101, 33, 33);
+      }
+    }
+
+    .file-title {
       color: var(--file-text-color);
-      font-weight: normal;
+      font-weight: 500;
       pointer-events: all;
 
       &.active,
@@ -172,16 +179,15 @@ button.desktop-explorer {
   align-items: center;
   user-select: none;
 
-  & div > a { // Folder links
+  .folder-title { // Folder links
     color: var(--folder-text-color);
     font-family: var(--bodyFont);
-    font-size: 0.95rem;
-    font-weight: $semiBoldWeight;
+    font-weight: 800; // ExtraBold
     line-height: 1.5rem;
     display: inline-block;
 
     &:hover {
-      color: var(--folder-text-active-color);
+      color: var(--folder-text-active-color) !important;
     }
   }
 
@@ -201,7 +207,6 @@ button.desktop-explorer {
       font-size: 0.95rem;
       display: inline-block;
       color: var(--secondary);
-      font-weight: $semiBoldWeight;
       margin: 0;
       line-height: 1.5rem;
       pointer-events: none;
@@ -216,14 +221,6 @@ button.desktop-explorer {
   transition: transform 0.3s ease;
   backface-visibility: visible;
   flex-shrink: 0;
-}
-
-.folder-title {
-  color: var(--folder-text-color);
-
-  &:hover {
-    color: var(--folder-text-active-color) !important;
-  }
 }
 
 li:has(> .folder-outer:not(.open)) > .folder-container > svg {
